# rml

./: .gitignore  =68.0.0  AI_Career_Recommendation_System_Runbook.md  DEPLOYMENT.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  FINAL_STATUS.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  SYSTEM_ARCHITECTURE.md  VERCEL_DEPLOYMENT.md  WINDOWS_RUNBOOK.md  app.py  build.sh  install.bat  install.sh  pyproject.toml  render.yaml  requirements.txt  start_system.bat  test_deployment.py  train_model.py  vercel.json
.vercel/: project.json
api/: index.py
backend/: README.md  alembic.ini  requirements.txt  run.py  start.bat  start.sh  test_models.py
backend/app/: app.py
backend/app/static/: style.css
backend/app/templates/: about.html  analytics.html  login.html  register.html
models/: career_label_encoder.pkl  career_recommendation_model.pkl  interests_mlb.pkl  skills_mlb.pkl
static/: main.js  style.css
templates/: about.html  analytics.html  dashboard.html  index.html  login.html  recommend.html  register.html
