[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-recommendation-system"
version = "1.0.0"
description = "A Flask-based career recommendation system"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "flask-cors==4.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "gunicorn==21.2.0",
]

[tool.setuptools]
packages = ["app"] 